# money-flow-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  PLAN.md  README.md  docker-compose.deploy.yml  docker-compose.dev.deploy.yml  docker-compose.mail-dev-services.yml  docker-compose.mail-local.yml  docker-compose.yml  orchestrator.py  package-lock.json  package.json  playwright.config.js  pyproject.toml
backend/app/: __init__.py  main.py  schemas.py
backend/app/api/: deps.py
backend/app/core/: config.py  errors.py  security.py
backend/app/db/: init_db.py  models.py  schema_upgrade.py  session.py
backend/app/services/: dashboard.py  email_service.py  fx_service.py  importer.py  merge.py  owner_links.py  price_service.py  profile.py  runtime.py  ws_hub.py
backend/tests/: test_api_v1.py  test_init_db.py  test_orchestrator.py  test_run_e2e_with_orchestrator.py
e2e/: app.spec.js  feature-matrix.md
e2e/specs/: auth.spec.js  collaboration.spec.js  dashboard.spec.js  deeplink.spec.js  holdings.spec.js  import.spec.js  prices.spec.js  settings.spec.js  shell-state.spec.js  transactions.spec.js  ws.spec.js
e2e/support/: helpers.js
frontend/: index.html  vite.config.js
frontend/src/: App.css  App.jsx  index.css
infra/: nginx-entrypoint.sh  nginx.conf
scripts/: check_mojibake.py  create_service_mail_profile.py  reset_password.py  run_e2e_with_orchestrator.py  run_mail_live_e2e.py  upgrade_schema.py  verify_e2e_screenshots.py
scripts/deploy/: enmserver-apply-nginx-reverse-proxy.sh
scripts/deploy/jenkins/: deploy-jenkins-container.sh  (+2 more)
(+10 files in other folders)
